Edit CI to make pages job run on html/css changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,10 @@ pages:
   artifacts:
     paths:
       - public
+  only:
+    changes:
+      - "public/**/*.css"
+      - "public/**/*.html"
 
 html_validator:
   stage: test
