--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,10 @@ pages:
   artifacts:
     paths:
       - public
+  only:
+    changes:
+      - "public/**/*.css"
+      - "public/**/*.html"
 
 html_validator:
   stage: test
