--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ e2e:website-test:
     - npm install -g less
   script:
     - lessc less/main.less public/css/style.css
-    - php -S 0.0.0.0:8080 -t public public/index.html &
+    - php -S 0.0.0.0:8080 -t public > /dev/null 2>&1 &
     - cd tests/webtest
     - python3 -m unittest
   only:
