--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,11 @@ stages:
   - test
   - deploy
 
+workflow:
+  rules:
+    - if: '$CI_COMMIT_BRANCH'
+
+
 pages:
   stage: deploy
   script:
@@ -14,6 +19,8 @@ pages:
   only:
     changes:
       - "site/**/*"
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 static_validation:
   stage: test
@@ -33,8 +40,7 @@ e2e:website-test:
     - name: selenium/standalone-firefox
       alias: selenium_firefox
   script:
-    - jekyll build -s site -d public
-    - python3 -m http.server 8080 -d public > /dev/null 2>&1 &
+    - jekyll serve -s site -P 8080
     - cd tests/webtest
     - python3 -m unittest
   only:
