Fixed error in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ e2e:website-test:
     - name: selenium/standalone-firefox
       alias: selenium_firefox
   script:
-    - jekyll serve -s site -P 8080
+    - jekyll serve -B -s site -P 8080
     - cd tests/webtest
     - python3 -m unittest
   only:
