start to convert js to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "plugins": [
         { "name": "typescript-tslint-plugin" }
-      ]
+      ],
+      "lib": ["es6", "dom", "es2017"],
     },
 }
